dataset1235/2025-2/2868285114/users/3240599857/executions/4269873056_1026882843.log
== SUBMISSION (2025-08-26 22:32:59)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:33:55)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:32:56)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:31:04)
-- CODE: 
raio = int(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.05'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3.2'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3.5'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.0'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.4'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:39:47)
-- CODE: 
impot math
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:39:56)
-- CODE: 
import math
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:39:48)
-- CODE: 
impot math
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    impot math
          ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:30:42)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:31:05)
-- CODE: 
raio = int(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.05'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3.2'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '3.5'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.0'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.4'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio = int(input())
           ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:33:55)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:34:18)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:33:53)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
